--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ instagram_username: samirr2873
 theme: minima
 plugins:
   - jekyll-feed
+future: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
